--- a/conf/modules.config
+++ b/conf/modules.config
@@ -507,9 +507,11 @@ process {
         ]
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
-            'findthreshold_edge':0.9,
-            'findthreshold_cutoff':'user',
-            'findthreshold_spc':0.995]
+            //'findthreshold_edge':0.9,
+            'subsample':1000,
+            'findthreshold_cutoff':'optimal' //,'user'
+            //'findthreshold_spc':0.995
+            ]
     }
 
     withName: REPORT_THRESHOLD {
@@ -555,6 +557,7 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
         ext.args = ['minseq':5,
+                    'maxseq':500,
                     'traits':'isotype',
                     'tips':'isotype']
     }
