--- a/.github/workflows/awstest.yml
+++ b/.github/workflows/awstest.yml
@@ -1,33 +1,40 @@
 name: nf-core AWS test
-# This workflow can be triggered manually with the GitHub actions workflow dispatch button.
-# It runs the -profile 'test' on AWS batch
+# This workflow can be triggered manually with the GitHub Actions workflow dispatch button.
+# It runs the -profile 'test' on AWS Batch
 
 on:
   workflow_dispatch:
+
 jobs:
-  run-platform:
+  run-on-aws:
     name: Run AWS tests
-    if: github.repository == 'Argentys/airrflow'
     runs-on: ubuntu-latest
     steps:
-      # Launch workflow using Seqera Platform CLI tool action
-      - name: Launch workflow via Seqera Platform
-        uses: seqeralabs/action-tower-launch@v2
-        with:
-          workspace_id: ${{ secrets.TOWER_WORKSPACE_ID }}
-          access_token: ${{ secrets.TOWER_ACCESS_TOKEN }}
-          compute_env: ${{ secrets.TOWER_COMPUTE_ENV }}
-          revision: ${{ github.sha }}
-          workdir: s3://${{ secrets.AWS_S3_BUCKET }}/work/airrflow/work-${{ github.sha }}
-          parameters: |
-            {
-              "outdir": "s3://${{ secrets.AWS_S3_BUCKET }}/airrflow/results-test-${{ github.sha }}"
-            }
-          profiles: test
+      # Check out the code from the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - uses: actions/upload-artifact@v4
+      # Configure AWS credentials from secrets
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          name: Seqera Platform debug log file
-          path: |
-            seqera_platform_action_*.log
-            seqera_platform_action_*.json
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1  # Change to your AWS region
+
+      # Install Nextflow
+      - name: Install Nextflow
+        run: |
+          curl -s https://get.nextflow.io | bash
+          sudo mv nextflow /usr/local/bin/
+
+      # Run Nextflow pipeline on AWS Batch
+      - name: Run Nextflow on AWS Batch
+        run: |
+          nextflow run Argentys/airrflow \
+          -profile test,awsbatch \
+          --mode assembled --input input2.tsv --max_memory 72.GB --max_cpus 12 \
+          --lineage_tree_builder dnapars --lineage_tree_exec /usr/local/bin/dnapars \
+          --input input2.tsv  --clonal_threshold 0.16 \
+          -w s3://${{ secrets.AWS_S3_BUCKET }}/work/airrflow/work-${{ github.sha }} \
+          --outdir s3://${{ secrets.AWS_S3_BUCKET }}/airrflow/results-test-${{ github.sha }}
