--- a/.github/workflows/awsfulltest.yml
+++ b/.github/workflows/awsfulltest.yml
@@ -1,16 +1,18 @@
-name: nf-core AWS test
-# This workflow can be triggered manually with the GitHub actions workflow dispatch button.
-# It runs the -profile 'test' on AWS batch
+name: nf-core AWS full size tests
+# This workflow is triggered on published releases.
+# It can be additionally triggered manually with GitHub actions workflow dispatch button.
+# It runs the -profile 'test_full' on AWS batch
 
 on:
+  release:
+    types: [published]
   workflow_dispatch:
 jobs:
   run-platform:
-    name: Run AWS tests
+    name: Run AWS full tests
     if: github.repository == 'nf-core/airrflow'
     runs-on: ubuntu-latest
     steps:
-      # Launch workflow using Seqera Platform CLI tool action
       - name: Launch workflow via Seqera Platform
         uses: seqeralabs/action-tower-launch@v2
         with:
@@ -21,9 +23,10 @@ jobs:
           workdir: s3://${{ secrets.AWS_S3_BUCKET }}/work/airrflow/work-${{ github.sha }}
           parameters: |
             {
-              "outdir": "s3://${{ secrets.AWS_S3_BUCKET }}/airrflow/results-test-${{ github.sha }}"
+              "hook_url": "${{ secrets.MEGATESTS_ALERTS_SLACK_HOOK_URL }}",
+              "outdir": "s3://${{ secrets.AWS_S3_BUCKET }}/airrflow/results-${{ github.sha }}"
             }
-          profiles: test
+          profiles: test_full
 
       - uses: actions/upload-artifact@v4
         with:
