--- a/nextflow.config
+++ b/nextflow.config
@@ -101,6 +101,7 @@ params {
     crossby = 'subject_id'
     singlecell = 'single_cell'
     clonal_threshold = 'auto'
+    default_threshold = 'auto'
     skip_all_clones_report = false
     skip_report_threshold = false
 
