--- a/conf/test.config
+++ b/conf/test.config
@@ -26,7 +26,7 @@ params {
     reference_fasta = pipelines_testdata_base_path + 'database-cache/imgtdb_base.zip'
     reference_igblast = pipelines_testdata_base_path + 'database-cache/igblast_base.zip'
 
-    mode = 'assembled'
+    mode = 'fastq'
     lineage_tree_builder = 'dnapars'
     lineage_tree_exec = '/usr/local/bin/dnapars'
 
@@ -35,7 +35,7 @@ params {
     umi_length = 8
     umi_start = 6
     umi_position = 'R1'
-//    index_file = true
+    index_file = false
     isotype_column = 'c_primer'
     lineage_trees = true
 }
