--- a/conf/test_nocluster.config
+++ b/conf/test_nocluster.config
@@ -34,7 +34,7 @@ params {
     umi_start = 6
     umi_position = 'R1'
     cluster_sets = false
-    index_file = false
+    index_file = FALSE
     clonal_threshold = 0.15
     isotype_column = 'c_primer'
 }
