--- a/conf/test_raw_immcantation_devel.config
+++ b/conf/test_raw_immcantation_devel.config
@@ -34,7 +34,7 @@ params {
     umi_length = 8
     umi_start = 6
     umi_position = 'R1'
-    index_file = FALSE
+    index_file =  false
     isotype_column = 'c_primer'
 }
 
