--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params {
     input = null
     mode = "fastq"
     miairr="$projectDir/assets/reveal/mapping_MiAIRR_BioSample_v1.3.1.tsv"
-    index_file = FALSE
+    index_file = false
     pipelines_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/airrflow/'
 
     // ----------------------------
