--- a/conf/test.config
+++ b/conf/test.config
@@ -35,7 +35,7 @@ params {
     umi_length = 8
     umi_start = 6
     umi_position = 'R1'
-    //index_file = false
+    index_file = false
     isotype_column = 'c_primer'
     lineage_trees = true
 }
