--- a/conf/test_no_umi.config
+++ b/conf/test_no_umi.config
@@ -18,22 +18,33 @@ params {
 
     mode = 'fastq'
 
-    cprimer_position = 'R1'
+ //   cprimer_position = 'R1'
     library_generation_method = 'specific_pcr'
-    cprimer_start = 4
-    vprimer_start = 4
-    primer_revpr = true
-    umi_length = 0
-    isotype_column = 'c_primer'
+ //   cprimer_start = 4
+ //  vprimer_start = 4
+ //   primer_revpr = true
+ //   umi_length = 0
+ //  isotype_column = 'c_primer'
 
     // Input data
-    input = pipelines_testdata_base_path + 'testdata-no-umi/Metadata_test-no-umi_airr.tsv'
-    cprimers = pipelines_testdata_base_path + 'testdata-no-umi/Greiff2014_CPrimers.fasta'
-    vprimers = pipelines_testdata_base_path + 'testdata-no-umi/Greiff2014_VPrimers.fasta'
+ //   input = pipelines_testdata_base_path + 'testdata-no-umi/Metadata_test-no-umi_airr.tsv'
+ //   cprimers = pipelines_testdata_base_path + 'testdata-no-umi/Greiff2014_CPrimers.fasta'
+ //   vprimers = pipelines_testdata_base_path + 'testdata-no-umi/Greiff2014_VPrimers.fasta'
     reference_fasta = pipelines_testdata_base_path + 'database-cache/imgtdb_base.zip'
     reference_igblast = pipelines_testdata_base_path + 'database-cache/igblast_base.zip'
 
+   // Primer and UMI inputs
+    cprimers = null
+    vprimers = null
+    vprimer_start = 0
+    cprimer_start = 0
+    cprimer_position = 'R1'
+    primer_revpr = false
 
+    // UMI and primer handling
+    umi_position = 'R1'
+    umi_length = -1
+    umi_start = 0
 }
 process {
     // When not using UMIs, set the coord parameter based on source (e.g., sra or illumina)
