--- a/conf/test_no_umi.config
+++ b/conf/test_no_umi.config
@@ -19,7 +19,7 @@ params {
     mode = 'fastq'
 
  //   cprimer_position = 'R1'
-    library_generation_method = 'specific_pcr'
+ //   library_generation_method = 'specific_pcr'
  //   cprimer_start = 4
  //  vprimer_start = 4
  //   primer_revpr = true
