--- a/conf/test_no_umi.config
+++ b/conf/test_no_umi.config
@@ -34,6 +34,7 @@ params {
     reference_igblast = pipelines_testdata_base_path + 'database-cache/igblast_base.zip'
 
    // Primer and UMI inputs
+    library_generation_method = null
     cprimers = null
     vprimers = null
     vprimer_start = 0
