--- a/conf/test_no_umi.config
+++ b/conf/test_no_umi.config
@@ -45,7 +45,7 @@ params {
     vprimer_start = 0
     cprimer_start = 0
     cprimer_position = 'R1'
-    primer_revpr = true
+    primer_revpr = false
 
     // UMI and primer handling
     umi_position = 'R1'
