--- a/nextflow.config
+++ b/nextflow.config
@@ -53,8 +53,8 @@ params {
 
     // Mask primers
 
-    primer_r1_maxerror = 1.0 //0.2
-    primer_r2_maxerror = 1.0 //0.2
+    primer_r1_maxerror = 0.2
+    primer_r2_maxerror = 0.2
     primer_mask_mode = 'cut'
     maskprimers_align = false
     primer_extract_len = 0
