--- a/conf/test_no_umi.config
+++ b/conf/test_no_umi.config
@@ -17,6 +17,8 @@ params {
     max_time = 72.h
 
     mode = 'fastq'
+    lineage_tree_builder = 'dnapars'
+    lineage_tree_exec = '/usr/local/bin/dnapars'
 
  //   cprimer_position = 'R1'
     library_generation_method = 'specific_pcr'
