--- a/conf/modules.config
+++ b/conf/modules.config
@@ -509,7 +509,7 @@ process {
             'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
             'subsample':10000,
-            'findthreshold_cutoff':'optimal' //,'user'
+            'findthreshold_cutoff':'optimal' //'user',
             //'findthreshold_spc':0.995
             ]
     }
@@ -522,10 +522,11 @@ process {
         ]
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
-            'findthreshold_edge':0.9,
-            'findthreshold_cutoff':'user',
-            'findthreshold_spc':0.995,
-            'subsample':10000]
+            //'findthreshold_edge':0.9,
+            'subsample':10000,
+            'findthreshold_cutoff':'optimal' //'user',
+            //'findthreshold_spc':0.995,
+            ]
     }
 
     withName: DEFINE_CLONES_COMPUTE {
