--- a/conf/modules.config
+++ b/conf/modules.config
@@ -506,7 +506,7 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
         ext.args = ['findthreshold_method':'gmm',
-            'findthreshold_model':'norm-gamma',
+            'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
             'subsample':20000,
             'findthreshold_cutoff':'optimal' //'user',
@@ -521,7 +521,7 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
         ext.args = ['findthreshold_method':'gmm',
-            'findthreshold_model':'norm-gamma',
+            'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
             'subsample':20000,
             'findthreshold_cutoff':'optimal' //'user',
