--- a/conf/modules.config
+++ b/conf/modules.config
@@ -505,11 +505,11 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        ext.args = ['findthreshold_method':'gmm',
-            'findthreshold_model':'gamma-norm',
+        ext.args = ['findthreshold_method':'density',
+            //'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
-            'subsample':20000,
-            'findthreshold_cutoff':'optimal' //'user',
+            'subsample':10000
+            //'findthreshold_cutoff':'optimal' //'user',
             //'findthreshold_spc':0.995
             ]
     }
@@ -520,11 +520,11 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        ext.args = ['findthreshold_method':'gmm',
-            'findthreshold_model':'gamma-norm',
+        ext.args = ['findthreshold_method':'density',
+            //'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
-            'subsample':20000,
-            'findthreshold_cutoff':'optimal' //'user',
+            'subsample':10000
+            //'findthreshold_cutoff':'optimal' //'user',
             //'findthreshold_spc':0.995,
             ]
     }
