--- a/conf/modules.config
+++ b/conf/modules.config
@@ -505,7 +505,7 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        ext.args = ['findthreshold_method':'density',
+        ext.args = ['findthreshold_method':'dens',
             //'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
             'subsample':10000
@@ -520,7 +520,7 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        ext.args = ['findthreshold_method':'density',
+        ext.args = ['findthreshold_method':'dens',
             //'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
             'subsample':10000
