--- a/conf/modules.config
+++ b/conf/modules.config
@@ -506,10 +506,10 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
         ext.args = ['findthreshold_method':'dens',
-            //'findthreshold_model':'gamma-norm',
+            'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
             'subsample':10000
-            //'findthreshold_cutoff':'optimal' //'user',
+            'findthreshold_cutoff':'optimal' //'user',
             //'findthreshold_spc':0.995
             ]
     }
@@ -521,7 +521,7 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
         ext.args = ['findthreshold_method':'dens',
-            //'findthreshold_model':'gamma-norm',
+            'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
             'subsample':10000
             //'findthreshold_cutoff':'optimal' //'user',
