--- a/conf/modules.config
+++ b/conf/modules.config
@@ -508,8 +508,8 @@ process {
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
-            'subsample':10000,
-            'findthreshold_cutoff':'optimal' //'user',
+            'subsample':10000
+            //'findthreshold_cutoff':'optimal' //'user',
             //'findthreshold_spc':0.995
             ]
     }
@@ -523,7 +523,7 @@ process {
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
             //'findthreshold_edge':0.9,
-            'subsample':10000,
+            'subsample':10000
             //'findthreshold_cutoff':'optimal' //'user',
             //'findthreshold_spc':0.995,
             ]
