--- a/conf/test.config
+++ b/conf/test.config
@@ -26,7 +26,7 @@ params {
     reference_fasta = pipelines_testdata_base_path + 'database-cache/imgtdb_base.zip'
     reference_igblast = pipelines_testdata_base_path + 'database-cache/igblast_base.zip'
 
-    mode = 'fastq'
+    mode = 'assembled'
     lineage_tree_builder = 'dnapars'
     lineage_tree_exec = '/usr/local/bin/dnapars'
 
