--- a/conf/modules.config
+++ b/conf/modules.config
@@ -507,10 +507,8 @@ process {
         ]
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
-            //'findthreshold_edge':0.9,
             'subsample':10000,
-            'findthreshold_cutoff':'opt' //'user',
-            //'findthreshold_spc':0.995
+            'findthreshold_cutoff':'opt'
             ]
     }
 
@@ -522,10 +520,8 @@ process {
         ]
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
-            //'findthreshold_edge':0.9,
             'subsample':10000,
-            'findthreshold_cutoff':'opt' //'user',
-            //'findthreshold_spc':0.995,
+            'findthreshold_cutoff':'opt'
             ]
     }
 
