--- a/conf/modules.config
+++ b/conf/modules.config
@@ -508,7 +508,8 @@ process {
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
             'subsample':20000,
-            'findthreshold_cutoff':'opt'
+            'findthreshold_cutoff':'opt',
+            'findthreshold_edge':0.5
             ]
     }
 
@@ -521,7 +522,8 @@ process {
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
             'subsample':20000,
-            'findthreshold_cutoff':'opt'
+            'findthreshold_cutoff':'opt',
+            'findthreshold_edge':0.5
             ]
     }
 
