--- a/nextflow.config
+++ b/nextflow.config
@@ -104,7 +104,7 @@ params {
     default_threshold = 'auto'
     skip_all_clones_report = false
     skip_report_threshold = false
-
+    clustering_model = 'hierarchical'
     // tree lineage options
     lineage_tree_builder = 'raxml'
     lineage_tree_exec = '/usr/local/bin/raxml-ng'
