--- a/conf/modules.config
+++ b/conf/modules.config
@@ -507,9 +507,10 @@ process {
         ]
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
-            'subsample':20000,
-            'findthreshold_cutoff':'opt',
-            'findthreshold_edge':0.5
+            //'findthreshold_edge':0.9,
+            'subsample':10000,
+            'findthreshold_cutoff':'optimal' //,'user'
+            //'findthreshold_spc':0.995
             ]
     }
 
@@ -521,10 +522,10 @@ process {
         ]
         ext.args = ['findthreshold_method':'gmm',
             'findthreshold_model':'gamma-norm',
-            'subsample':20000,
-            'findthreshold_cutoff':'opt',
-            'findthreshold_edge':0.5
-            ]
+            'findthreshold_edge':0.9,
+            'findthreshold_cutoff':'user',
+            'findthreshold_spc':0.995,
+            'subsample':10000]
     }
 
     withName: DEFINE_CLONES_COMPUTE {
@@ -555,8 +556,8 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        ext.args = ['minseq':3,
-                    'maxseq':2000,
+        ext.args = ['minseq':5,
+                    'maxseq':10000,
                     'traits':'isotype',
                     'tips':'isotype']
     }
