--- a/conf/test.config
+++ b/conf/test.config
@@ -42,7 +42,7 @@ params {
 
 process{
     withName:"DEFINE_CLONES*"{
-        ext.args = ['outname':'', 'model':'hierarchical',
+        ext.args = ['outname':'', 'model':'spectral',
                     'method':'nt', 'linkage':'single',
                     'outputby':'sample_id', 'min_n':10]
     }
