--- a/conf/modules.config
+++ b/conf/modules.config
@@ -534,7 +534,7 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        ext.args = ['outname':'', 'model':'spectral',
+        ext.args = ['outname':'', 'model':'hierarchical',
                     'method':'nt', 'linkage':'single',
                     'min_n':30]
     }
@@ -545,7 +545,7 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        ext.args = ['outname':'', 'model':'spectral',
+        ext.args = ['outname':'', 'model':'hierarchical',
                     'method':'nt', 'linkage':'single',
                     'min_n':30]
     }
