--- a/conf/modules.config
+++ b/conf/modules.config
@@ -537,6 +537,8 @@ process {
         ext.args = ['outname':'', 'model':'hierarchical',
                     'method':'nt', 'linkage':'single',
                     'min_n':30]
+        ext.args2 = ['outname':'', 'model':'spectral',
+                    'method':'novj']
     }
 
     withName: DEFINE_CLONES_REPORT {
@@ -548,6 +550,8 @@ process {
         ext.args = ['outname':'', 'model':'hierarchical',
                     'method':'nt', 'linkage':'single',
                     'min_n':30]
+        ext.args2 = ['outname':'', 'model':'spectral',
+                    'method':'novj']
     }
 
     withName: DOWSER_LINEAGES {
