--- a/conf/test.config
+++ b/conf/test.config
@@ -38,6 +38,7 @@ params {
     index_file = false
     isotype_column = 'c_primer'
     lineage_trees = true
+    clonal_threshold = 'spectral'
 }
 
 process{
