--- a/conf/modules.config
+++ b/conf/modules.config
@@ -537,7 +537,7 @@ process {
         ext.args = ['outname':'', 'model':'hierarchical',
                     'method':'nt', 'linkage':'single',
                     'min_n':30]
-        ext.args2 = ['outname':'', 'model':'spectral',
+        ext.args2 = ['outname':'', 'model':"'spectral'",
                     'method':'novj']
     }
 
@@ -550,7 +550,7 @@ process {
         ext.args = ['outname':'', 'model':'hierarchical',
                     'method':'nt', 'linkage':'single',
                     'min_n':30]
-        ext.args2 = ['outname':'', 'model':'spectral',
+        ext.args2 = ['outname':'', 'model':"'spectral'",
                     'method':'novj']
     }
 
