--- a/conf/modules.config
+++ b/conf/modules.config
@@ -538,7 +538,7 @@ process {
                     'method':'nt', 'linkage':'single',
                     'min_n':30]
         ext.args2 = ['outname':'', 'model':'spectral',
-                    'method':'vj']
+                    'method':'novj']
     }
 
     withName: DEFINE_CLONES_REPORT {
@@ -551,7 +551,7 @@ process {
                     'method':'nt', 'linkage':'single',
                     'min_n':30]
         ext.args2 = ['outname':'', 'model':'spectral',
-                    'method':'vj']
+                    'method':'novj']
     }
 
     withName: DOWSER_LINEAGES {
