--- a/conf/modules.config
+++ b/conf/modules.config
@@ -103,6 +103,12 @@ process {
         ]
     }
 
+    withName: 'ADD_SEQID_OAS {
+        publishDir = [
+            enabled: false
+        ]
+    }
+
     withName: MERGE_UMI {
         publishDir = [
             [
