--- a/conf/modules.config
+++ b/conf/modules.config
@@ -103,7 +103,7 @@ process {
         ]
     }
 
-    withName: 'ADD_SEQID_OAS {
+    withName: 'ADD_SEQID_OAS' {
         publishDir = [
             enabled: false
         ]
