--- a/nextflow.config
+++ b/nextflow.config
@@ -225,7 +225,7 @@ profiles {
         shifter.enabled         = false
         charliecloud.enabled    = false
         apptainer.enabled       = false
-        docker.runOptions       = '-u $(id -u):$(id -g)'
+        docker.runOptions       = '-u $(id -u):$(id -g) -v ${workflow.projectDir}/bin:/bin'
     }
     arm {
         docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
