--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,15 @@
 ----------------------------------------------------------------------------------------
 */
 
+def uid = System.getenv('UID') ?: new ByteArrayOutputStream().tap {
+    ['id', '-u'].execute().consumeProcessOutput(this, System.err)
+}.toString().trim()
+
+def gid = System.getenv('GID') ?: new ByteArrayOutputStream().tap {
+    ['id', '-g'].execute().consumeProcessOutput(this, System.err)
+}.toString().trim()
+
+
 // Global default params, used in configs
 params {
 
@@ -225,7 +234,7 @@ profiles {
         shifter.enabled         = false
         charliecloud.enabled    = false
         apptainer.enabled       = false
-        docker.runOptions       = '-u $(id -u):$(id -g)'
+        docker.runOptions = "-u ${uid}:${gid} -v ${workflow.projectDir}/bin:/bin"
     }
     arm {
         docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
