--- a/nextflow.config
+++ b/nextflow.config
@@ -1,10 +1,11 @@
-def uid = System.getenv('UID') ?: new ByteArrayOutputStream().tap {
-    ['id', '-u'].execute().consumeProcessOutput(this, System.err)
-}.toString().trim()
+def getOutput(cmd) {
+    def proc = cmd.execute()
+    proc.waitFor()
+    return proc.in.text.trim()
+}
 
-def gid = System.getenv('GID') ?: new ByteArrayOutputStream().tap {
-    ['id', '-g'].execute().consumeProcessOutput(this, System.err)
-}.toString().trim()
+def uid = System.getenv('UID') ?: getOutput(['id', '-u'])
+def gid = System.getenv('GID') ?: getOutput(['id', '-g'])
 
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
