--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,11 @@
-def getOutput(cmd) {
-    def proc = cmd.execute()
+def getCmdOut(List command) {
+    def proc = command.execute()
     proc.waitFor()
-    return proc.in.text.trim()
+    return proc.inputStream.text.trim()
 }
 
-def uid = System.getenv('UID') ?: getOutput(['id', '-u'])
-def gid = System.getenv('GID') ?: getOutput(['id', '-g'])
+def uid = System.getenv('UID') ?: getCmdOut(['id', '-u'])
+def gid = System.getenv('GID') ?: getCmdOut(['id', '-g'])
 
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
