--- a/nextflow.config
+++ b/nextflow.config
@@ -235,7 +235,7 @@ profiles {
         shifter.enabled         = false
         charliecloud.enabled    = false
         apptainer.enabled       = false
-        docker.runOptions = "-u ${uid}:${gid} -v ${workflow.projectDir}/bin:/bin"
+        docker.runOptions = "-u ${uid}:${gid} -v ${projectDir}/bin:/bin"
     }
     arm {
         docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
