--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,3 @@
-def getCmdOut(List command) {
-    def proc = command.execute()
-    proc.waitFor()
-    return proc.inputStream.text.trim()
-}
-
-def uid = System.getenv('UID') ?: getCmdOut(['id', '-u'])
-def gid = System.getenv('GID') ?: getCmdOut(['id', '-g'])
 
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -235,7 +227,7 @@ profiles {
         shifter.enabled         = false
         charliecloud.enabled    = false
         apptainer.enabled       = false
-        docker.runOptions = "-u ${uid}:${gid} -v ${projectDir}/bin:/bin"
+        docker.runOptions = '-u $(id -u):$(id -g)'
     }
     arm {
         docker.runOptions       = '-u $(id -u):$(id -g) --platform=linux/amd64'
