--- a/conf/modules.config
+++ b/conf/modules.config
@@ -572,6 +572,14 @@ process {
                     'tips':'isotype']
     }
 
+    withName: IGTREE {
+        publishDir = [
+            path: { "${params.outdir}/clonal_analysis/igtree" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
     // -------------------------------
     // Reports
     // -------------------------------
