--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,3 @@
-
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     nf-core/airrflow Nextflow config file
@@ -173,6 +172,9 @@ params {
     validationSchemaIgnoreParams     = 'genomes,igenomes_base'
     validationShowHiddenParams       = false
     validate_params                  = true
+
+    // New parameter
+    run_igtree = false     // Default to false, only enabled in test profile
 
 }
 
