--- a/nextflow.config
+++ b/nextflow.config
@@ -295,6 +295,7 @@ profiles {
         executor.cpus           = 4
         executor.memory         = 8.GB
     }
+    OAS     { includeConfig 'conf/OAS.config'      }
     test      { includeConfig 'conf/test.config'      }
     test_full { includeConfig 'conf/test_full.config' }
     test_tcr { includeConfig 'conf/test_tcr.config' }
